--- a/SawChain_Check/SawChain_Check.vcxproj.filters
+++ b/SawChain_Check/SawChain_Check.vcxproj.filters
@@ -45,6 +45,12 @@
     <ClInclude Include="MotionCard.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="DMC1380Card.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="globle.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SawChain_Check.cpp">
@@ -66,6 +72,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="MotionCard.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="DMC1380Card.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
