--- a/SawChain_Check/SawChain_Check.vcxproj
+++ b/SawChain_Check/SawChain_Check.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="SawChain_CheckView.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="x64\Tool.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Controller.cpp" />
